<resources>

    <string name="facebook_app_id">291520461335136</string>
    <string name="fb_login_protocol_scheme">fb291520461335136</string>

    <!-- LOGIN -->
    <string name="app_name">LevisApp</string>
    <string name="login_userName">User Name</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_register">Register</string>
    <string name="login_create_account">Dont Have Account?</string>
    <string name="login_terms">Terms and Conditions</string>


    <!-- REGISTER -->
    <string name="register_tittle">Register</string>
    <string name="register_back">Back</string>
    <string name="register_nombre">Nombre</string>
    <string name="register_email">Mail</string>
    <string name="register_password">Password</string>
    <string name="register_create">Create Account</string>

    <!-- SEARCH -->

    <string name="search_tittle">This is How We Dance!</string>


    <!-- PROFILE -->

    <string name="profile_publications">PUBLICATIONS</string>
    <string name="profile_edit">Edit Profile</string>

</resources>
