<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.levis.app.levisapp.interfaz.Profile">

    <android.support.v7.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/profile_menu_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/profileButtonBack"
                style="@style/Levis.buttonBack"
                android:layout_width="88dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:onClick="goBackToSearch"
                android:text="@string/register_back"
                android:textColor="@android:color/black"
                android:theme="@style/Levis.buttonBack"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp" />


            <TextView
                android:id="@+id/settingsUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                android:text="User Name"
                android:theme="@style/Levis.tittle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp" />

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="124dp"
                android:layout_height="128dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="false"
                android:background="@drawable/circle"
                android:cropToPadding="false"
                android:scaleType="center"
                app:layout_constraintHorizontal_bias="0.102"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settingsUser"
                app:srcCompat="@drawable/explore_dummie"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/publicationsNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:text="00"
                android:theme="@style/Levis.tittle"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settingsUser"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_publications"
                android:textColor="@android:color/background_dark"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="@+id/publicationsNumber"
                app:layout_constraintRight_toRightOf="@+id/publicationsNumber"
                app:layout_constraintTop_toBottomOf="@+id/publicationsNumber" />

            <Button
                android:id="@+id/buttonEditProfile"
                style="@style/Levis.buttonRed"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:onClick="goToSettings"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/profile_edit"
                app:layout_constraintBottom_toBottomOf="@+id/profile_pic"
                app:layout_constraintLeft_toLeftOf="@+id/textView7"
                app:layout_constraintRight_toRightOf="@+id/textView7" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <GridView
        android:id="@+id/gridViewProfile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_toolbar" />


</android.support.constraint.ConstraintLayout>
